static_version/src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.Jumbotron-title {
  /* color: rgb(91, 58, 236); */
  color: white;
}

#header-style {
  background-color: blue;
}

.col-centered {
  float: none;
  margin: 0 auto;
}

.h2-coloured {
  color: whitesmoke;
  font: Roboto;
}

.h5-coloured {
  color: whitesmoke;
  font: Roboto;
}

#home {
  background-color: blue;
}

#hero {
  background-image: url("resources/Deadlift_pic.jpg");
  background-size: cover;
  background-position: center center;
  position: relative;
  top: 0;
  bottom: 0;
  height: 100vh;
  z-index: -10;
}

#hero-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  z-index: -5;
  background-color: rgba(0, 0, 0, 0.25);
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

